# blobrule4

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.forgejo/workflows/: build-and-publish.yml
catalog/: embed_catalog.py
catalog/information_schema/: check_constraints.yml  primary_keys.yml  tables.yml  views.yml
catalog/information_schema/information_schema/: callables.yml  columns.yml  foreign_keys.yml
catalog/postgresql/: callables.yml  check_constraints.yml  column_comments.yml  columns.yml  partitioning.yml  primary_keys.yml  unique_constraints.yml  user_defined_types.yml  views.yml
catalog/reference/: regex_domains.yml
catalog/sqlserver/: callables.yml  check_constraints.yml  column_comments.yml  columns.yml  partitioning.yml  synonyms.yml  tables.yml  temporal_tables.yml  unique_constraints.yml  user_defined_types.yml  views.yml
docs/: Blobfilter Domain Probing.md  Blobrule4 Index.md  Blobrule4 Project.md  Composable Relation Builders.md  Data As Control Plane.md  Domain Registry.md  Facts As Evidence.md  Regex Domain Probing.md  Resolution Sieve Architecture.md  Table Topic Matching.md
python/blobrule4/: intern.py  metadata.py  models.py  sampler.py  seed.py  structural.py  ttst_models.py
sql/: build_conn_str.sql  enriched_changelog.sql  poll_catalogs.sql  registry.sql
sql/socrata/: socrata_fts.sql
test/: test_build_domains.py  test_build_filters_embeddings.py  test_combined_sieve.py  test_e2e_pg.py  test_enrich_domains.py  test_geo_fd_check.py  test_geo_probe.py  test_load_wordnet.py  test_structural_pg.py
(+17 files in other folders)
